[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perg_hgp"
version = "0.3.0"
description = "Entropy-regularized power-cover H0 and Rank-Gabriel HGP research backends in 3D"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Louis Hauseux"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
atlas = ["torch>=2.0", "pyyaml", "tqdm", "scikit-learn>=1.0"]
test = [
    "pytest>=8",
    "torch>=2.0",
    "pyyaml",
    "tqdm",
    "scikit-learn>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["perg_hgp*"]
exclude = ["tests*"]
