[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perg_hgp"
version = "0.3.0"
description = "Historical PowerCover3D reference prototype for the E-HGP research project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Louis Hauseux"}]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["perg_hgp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
